[package]
name = "core-os-rust"
version = "0.1.0"
authors = ["Alex Chi <iskyzh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-a = "2.8.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
register = "0.4.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "core-os-rust"
path = "src/main.rs"

[[bin]]
name = "bootloader"
path = "src/bootloader.rs"
